--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# google drive
+.tmp.drivedownload
+.tmp.driveupload
+
+# data
+data
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
