--- a/binarize/cython/dockerfile
+++ b/binarize/cython/dockerfile
@@ -8,15 +8,13 @@ RUN conda update -y conda
 RUN conda install -y python=3.11
 RUN conda install -y --solver=classic --force-reinstall \
     conda-forge::conda-libmamba-solver conda-forge::libmamba \
-    conda-forge::libmambapy conda-forge::libarchive \
-    conda-forge::python-devtools
+    conda-forge::libmambapy conda-forge::libarchive
 
 # install c compiler/ extension
 RUN conda install -y conda-forge::gxx conda-forge::gcc
-RUN conda install -y conda-forge::clang
+RUN conda install -y conda-forge::python-devtools conda-forge::cython
 # install tesseract
 RUN conda install -y conda-forge::tesseract
 
 # install dependencies
-RUN python -m pip install Cython
 RUN python -m pip install pytesseract
