--- a/binarize/nuitka/dockerfile-test
+++ b/binarize/nuitka/dockerfile-test
@@ -5,25 +5,16 @@ WORKDIR /code
 
 # python version
 RUN conda update -y conda
-RUN conda create -y -n py311 python=3.11
+RUN conda install -y python=3.11
+RUN conda install -y conda-forge::gxx conda-forge::gcc
+# RUN conda install -y conda-forge::gxx=12.2 conda-forge::gcc=12.2
+RUN conda install -y conda-forge::tesseract
 
-# # install dependencies with conda
-# RUN conda install -y -n py311 conda-forge::gxx conda-forge::gcc
-# RUN conda install -y conda-forge::libpython-static conda-forge::patchelf
+RUN conda install -y --solver=classic --force-reinstall \
+    conda-forge::conda-libmamba-solver conda-forge::libmamba \
+    conda-forge::libmambapy conda-forge::libarchive
+RUN conda install -y conda-forge::libpython-static conda-forge::patchelf conda-forge::binutils
+# RUN conda install -y conda-forge::clang
 
-# install dependencies with pip
-# RUN /bin/bash -c " \
-#     source activate py310 \
-#     "
-# RUN python -m pip install nuitka
+RUN conda install -y conda-forge::nuitka
 # RUN python -m pip install pytesseract
-
-# RUN conda install -y python=3.10.10
-# RUN conda install -y --solver=classic --force-reinstall \
-#     conda-forge::conda-libmamba-solver conda-forge::libmamba \
-#     conda-forge::libmambapy conda-forge::libarchive
-# RUN conda install -y conda-forge::gxx conda-forge::gcc
-# RUN conda install -y conda-forge::libpython-static conda-forge::patchelf conda-forge::binutils
-# RUN conda install -y conda-forge::tesseract
-
-# RUN python -m pip install nuitka
