--- a/binarize/cython/dockerfile
+++ b/binarize/cython/dockerfile
@@ -9,10 +9,10 @@ RUN conda install -y python=3.12
 # install c compiler/ extension
 RUN conda install -y conda-forge::gxx conda-forge::gcc
 RUN conda install -y conda-forge::python-devtools conda-forge::cython
-# RUN conda install -y --solver=classic --force-reinstall \
-#     conda-forge::conda-libmamba-solver conda-forge::libmamba \
-#     conda-forge::libmambapy conda-forge::libarchive
-
+RUN conda install -y conda-forge::conda-build
+RUN conda install -y --solver=classic --force-reinstall \
+    conda-forge::conda-libmamba-solver conda-forge::libmamba \
+    conda-forge::libmambapy conda-forge::libarchive
 # install tesseract
 RUN conda install -y conda-forge::tesseract=5
 
